# mafi

./: Makefile.in  README.md  _3d.c  _3d.h  _matrix.c  _matrix.h  configure  configure.ac  funcs.c  hash.c  mafi.c  mafi.h  parse.c  pi.input  readline.c  test.input  test.output  test.output-old
